--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<iframe src="ex1.buster.html"></iframe>
+<body style="overflow-x:hidden; border:0px;margin:0px;">
+
+<iframe width="21800px" height="2500px" src="ex1.main.html" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+
+<script>window.scrollTo(10200,0);
+</script>
