--- a/ex1.main.html
+++ b/ex1.main.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
+	<style type="text/css"/>
+		body {
+		    height: 200px;
+		    width: 400px;
+		    background: black;
+		
+		    position: fixed;
+		    top: 50%;
+		    left: 50%;
+		    margin-top: -100px;
+		    margin-left: -200px;
+		}
+	</style>
 <head>
 	<script>
 	if (top != self){
