--- a/ex1.main.html
+++ b/ex1.main.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<style type="text/css"/>
-		body {
-		    height: 200px;
-		    width: 400px;
-		    background: black;
+		body {d
 		
 		    position: fixed;
 		    top: 50%;
