--- a/ex1.main.html
+++ b/ex1.main.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<style type="text/css"/>
-		body {d
-		
-		    position: fixed;
-		    top: 50%;
-		    left: 50%;
-		    margin-top: -100px;
-		    margin-left: -200px;
+		#wrap { 
+			width: 900px; 
+			margin: 0 auto; 
 		}
 	</style>
 <head>
@@ -17,7 +13,9 @@
 	}
 	</script>
 </head>
+<div id="wrap">
 <body>
 herp de derp	
 </body>
+</div>
 </html>
